deleted/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app.kubernetes.io/component: deployment
    app.kubernetes.io/name: wallabag
    app.kubernetes.io/instance: wallabag
    app.kubernetes.io/version: "2.6.10"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wallabag
      app.kubernetes.io/instance: wallabag
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallabag
        app.kubernetes.io/instance: wallabag
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: wallabag
          image: "wallabag/wallabag:2.6.10"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            # - name: cache
            #   mountPath: /var/www/wallabag/var/cache
            - name: images
              mountPath: /var/www/wallabag/web/assets/images
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        # - name: cache
        #   persistentVolumeClaim:
        #     claimName: wallabag-cache
        - name: images
          persistentVolumeClaim:
            claimName: wallabag-images
