deleted/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wallabag
  name: wallabag-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: wallabag-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    -  wallabag.mgsds.com
    secretName: wallabag-ingress-tls
  rules:
  - host: wallabag.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wallabag
            port:
              number: 80
